@@ -17,6 +17,8 @@ was a significant change internally. I'm counting on my tests to prove correctne
 * LockInternals had a retry loop for all failures when it was only needed if the session expired
 and the lock node was lost. So, I refined the code to handle this specific case.
 
+* Issue 34: PathChildrenCache should ensure the path
+
 1.1.2/1.0.3 - Feb. 8, 2012
 ==========================
 * Added listener to Queues to listen for put completion
